--- a/Website/features.html
+++ b/Website/features.html
@@ -32,13 +32,16 @@
             <h2>Step 4 - Enjoy</h2>
         </div>
         <footer>
-            <a href="assets/unicorn.png" class="info">Contact Us</a>
-            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <a href="mailto:3ditstrawberry@gmail.com" class="info">Contact Us</a>
+            <a href="https://github.com/Tagdragonoir/Strawberry-Corp" class="info">About 3DIT</a>
             <hr>
-            <a href="assets/unicorn.png">
+            <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+            <a href="https://www.instagram.com/3dit_strawberry/">
                 <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+            <a href="https://twitter.com/corp_strawberry">
                 <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+            <a href="https://ca.indeed.com/cmp/Strawberry-Corporation">
                 <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
             </a>
         </footer>
