added team page css

--- a/Website/team.html
+++ b/Website/team.html
@@ -34,28 +34,16 @@
 
             <h2>Our product and our services</h2>
 
-<<<<<<< Updated upstream
-            <img src = "assets/Full Logo.png" alt ="3DIT logo">
+            <img class = "strawberrylogo" src = "assets/3DITlogoblackbg.png" alt ="3DIT logo">
             <p>Bring your designs to life</p>
-=======
-            <img  class = "DITlogo" src = "assets/3DITlogoblackbg.png" alt ="3DIT logo">
-
-            </p class = "slogan"> With 3Dit, bring your designs to life</p>
->>>>>>> Stashed changes
 
             <p>Through our platform, we want to put our customers in contact with individuals and specialists who have 3D printers, the know-how and the materials needed to bring the concepts thought up by our customers to life.</p>
 
             <h2>Our goals</h2>
 
-<<<<<<< Updated upstream
-            <p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
-            <img src = "assets/printerimage.png" width=600 height=400 style="background-color: black;">
-            <p>In short, be the bridge between your design and the achievement of individuals.</p>
-=======
             </p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
             <img class = "printer" src = "assets/printerimage.png" width=900 height=500>
             </p>In short, be the bridge between your design and the achievement of individuals.</p>
->>>>>>> Stashed changes
         </div>
         <footer>
             <a href="mailto:3ditstrawberry@gmail.com" class="info">Contact Us</a>
