fixed 3DIT logo

--- a/Website/team.html
+++ b/Website/team.html
@@ -34,7 +34,7 @@
 
             <h2>Our product and our services</h2>
 
-            <img class = "strawberrylogo" src = "assets/3DITlogoblackbg.png" alt ="3DIT logo">
+            <img class = "strawberrylogo" src = "assets/3DIT Logo Pink.png" alt ="3DIT logo">
             <p>Bring your designs to life</p>
 
             <p>Through our platform, we want to put our customers in contact with individuals and specialists who have 3D printers, the know-how and the materials needed to bring the concepts thought up by our customers to life.</p>
