--- a/Website/join.html
+++ b/Website/join.html
@@ -26,7 +26,7 @@
                 <label>Password*</label><br>
                 <input type="password" id="height" name="height"><br>
             </form>
-            <p color="red">*Required Fields</p>
+            <p>*Required Fields</p>
             <a class="single-button" href="assets/unicorn.png">NEXT</a>
         </div>
         <footer>
