Added teams info template

--- a/Website/team.html
+++ b/Website/team.html
@@ -27,6 +27,21 @@
 
             <p>Together with our team of enthusiasts, we want to be the hands that shape the products your creative minds think about. We are driven by a passion for good ideas, design and efficiency. This is the reason why we are committed to bring you all three.</p>
             
+            <img class = "pfp" src = "" alt = "TristanG">
+            <p>Short description of yourself</p> 
+
+            <img class = "pfp" src = "" alt = "TristanH">
+            <p>Short description of yourself</p> 
+
+            <img class = "pfp" src = "" alt = "Catherine">
+            <p>Short description of yourself</p>
+
+            <img class = "pfp" src = "" alt = "Youssef">
+            <p>Short description of yourself</p> 
+
+            <img class = "pfp" src = "" alt = "Aaron">
+            <p>Short description of yourself</p> 
+
             <h2>Our mission</h2>
 
             <p>Our mission is to offer our customers a wide choice in the materialization of their creativity. And we take pride in providing you with excellent customer service and support. We closely follow the latest printing trends and put the desires of our customers first. Our customers all over the world are happy to be part of our community.</p>
