did some css fixing

--- a/Website/team.html
+++ b/Website/team.html
@@ -57,7 +57,7 @@
             <h2>Our goals</h2>
 
             </p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
-            <img class = "printer" src = "assets/printerimage.png" width=900 height=500>
+            <img class = "printer" src = "assets/printerimage.png" >
             </p>In short, be the bridge between your design and the achievement of individuals.</p>
         </div>
         <footer>
