added PP and fixed css

--- a/Website/team.html
+++ b/Website/team.html
@@ -36,7 +36,7 @@
             <img class = "pfp" src = "" alt = "Catherine">
             <p>Short description of yourself</p>
 
-            <img class = "pfp" src = "" alt = "Youssef">
+            <img class = "pfp" src = "assets/YoussefPP.png" alt = "Youssef">
             <p>Short description of yourself</p> 
 
             <img class = "pfp" src = "" alt = "Aaron">
