--- a/Website/team.html
+++ b/Website/team.html
@@ -27,19 +27,24 @@
 
             <p>Together with our team of enthusiasts, we want to be the hands that shape the products your creative minds think about. We are driven by a passion for good ideas, design and efficiency. This is the reason why we are committed to bring you all three.</p>
             
-            <img class = "pfp" src = "" alt = "TristanG">
+            <h3>Tristan G</h2>
+            <img src = "" alt = "TristanG" width=100 height=100 class="pfp">
             <p>Short description of yourself</p> 
 
-            <img class = "pfp" src = "" alt = "TristanH">
+            <h3>Tristan Hebert</h2>
+            <img src = "assets\Tristan H PFP.png" alt = "TristanH" width=100 height=100 class="pfp">
             <p>Short description of yourself</p> 
 
-            <img class = "pfp" src = "" alt = "Catherine">
+            <h3>Catherine</h2>
+            <img src = "" alt = "Catherine" width=100 height=100 class="pfp">
             <p>Short description of yourself</p>
 
-            <img class = "pfp" src = "" alt = "Youssef">
+            <h3>Youssef</h2>
+            <img src = "" alt = "Youssef" width=100 height=100 class="pfp">
             <p>Short description of yourself</p> 
 
-            <img class = "pfp" src = "" alt = "Aaron">
+            <h3>Aaron</h2>
+            <img src = "" alt = "Aaron" width=100 height=100 class="pfp">
             <p>Short description of yourself</p> 
 
             <h2>Our mission</h2>
