--- a/Website/team.html
+++ b/Website/team.html
@@ -33,8 +33,8 @@
             <img class = "pfp" src = "" alt = "TristanH">
             <p>Short description of yourself</p> 
 
-            <img class = "pfp" src = "" alt = "Catherine">
-            <p>Short description of yourself</p>
+            <img class = "pfp" src = "assets/Catherine PFP.jpg" alt = "Catherine">
+            <p>I'm a 1st year computer science student at the University of Ottawa. I have 2 years of coding experience in Python and 1 year in Java, and my current interests are in website design.</p>
 
             <img class = "pfp" src = "" alt = "Youssef">
             <p>Short description of yourself</p> 
