fixed little merge bug

--- a/Website/team.html
+++ b/Website/team.html
@@ -39,12 +39,8 @@
             <img src = "" alt = "Catherine" width=100 height=100 class="pfp">
             <p>Short description of yourself</p>
 
-<<<<<<< HEAD
             <h3>Youssef</h2>
-            <img src = "" alt = "Youssef" width=100 height=100 class="pfp">
-=======
-            <img class = "pfp" src = "assets/YoussefPP.png" alt = "Youssef">
->>>>>>> ed6b85ec753fb9fea09a3e54ba7b256a300a5902
+            <img src = "assets/YoussefPP.png" alt = "Youssef" width=100 height=100 class="pfp">
             <p>Short description of yourself</p> 
 
             <h3>Aaron</h2>
