--- a/Website/team.html
+++ b/Website/team.html
@@ -25,7 +25,9 @@
 
             <h2>Our team</h2>
 
-            <p>Together with our team of enthusiasts, we want to be the hands that shape the products your creative minds think about. We are driven by a passion for good ideas, design and efficiency. This is the reason why we are committed to bring you all three.</p>
+            <p>Together with our team of enthusiasts, we want to be the hands that shape the products your 
+                creative minds think about. We are driven by a passion for good ideas, design and efficiency. 
+                This is the reason why we are committed to bring you all three.</p>
             
             <h3>Tristan G</h2>
             <img src = "" alt = "TristanG" width=100 height=100 class="pfp">
@@ -33,11 +35,14 @@
 
             <h3>Tristan Hebert</h2>
             <img src = "assets\Tristan H PFP.png" alt = "TristanH" width=100 height=100 class="pfp">
-            <p>Short description of yourself</p> 
+            <p> Tristan Hebert is a super awesome first year software engineer at the University of Ottawa. He has always been interested in 
+                problem solving as well as finding ways to make everything more efficient. This is his first project in the website 
+                desing industry and he is eager to work on many more projects in the years to come.</p> 
 
             <h3>Catherine</h2>
             <img src = "assets/Catherine PFP.jpg" alt = "Catherine" width=100 height=100 class="pfp">
-            <p>I'm a 1st year computer science student at the University of Ottawa. I have 2 years of coding experience in Python and 1 year in Java, and my current interests are in website design.</p>
+            <p>I'm a 1st year computer science student at the University of Ottawa. I have 2 years of coding experience in Python and 1 year in Java, 
+                and my current interests are in website design.</p>
 
             <h3>Youssef</h2>
             <img src = "assets/YoussefPP.png" alt = "Youssef" width=100 height=100 class="pfp">
