--- a/Website/team.html
+++ b/Website/team.html
@@ -30,26 +30,26 @@
                 This is the reason why we are committed to bring you all three.</p>
             
             <h3>Tristan G</h2>
-            <img src = "" alt = "TristanG" width=100 height=100 class="pfp">
+            <img src = "" alt = "TristanG"  class="pfp">
             <p>Short description of yourself</p> 
 
             <h3>Tristan Hebert</h2>
-            <img src = "assets\Tristan H PFP.png" alt = "TristanH" width=100 height=100 class="pfp">
+            <img src = "assets\Tristan H PFP.png" alt = "TristanH"  class="pfp">
             <p> Tristan Hebert is a super awesome first year software engineer at the University of Ottawa. He has always been interested in 
                 problem solving as well as finding ways to make everything more efficient. This is his first project in the website 
                 desing industry and he is eager to work on many more projects in the years to come.</p> 
 
             <h3>Catherine</h2>
-            <img src = "assets/Catherine PFP.jpg" alt = "Catherine" width=100 height=100 class="pfp">
+            <img src = "assets/Catherine PFP.jpg" alt = "Catherine"  class="pfp">
             <p>I'm a 1st year computer science student at the University of Ottawa. I have 2 years of coding experience in Python and 1 year in Java, 
                 and my current interests are in website design.</p>
 
             <h3>Youssef</h2>
-            <img src = "assets/YoussefPP.png" alt = "Youssef" width=100 height=100 class="pfp">
-            <p>Short description of yourself</p> 
+            <img src = "assets/YoussefPP.png" alt = "Youssef"  class="pfp">
+            <p>I'm a 1st year computer science student at the University of Ottawa. I have considerable skills in Python and JavaScript, as well as valuable experience in Git, Java and Web development (HTML, CSS). This my second time working on a website and I'm really enjoying it.</p> 
 
             <h3>Aaron</h2>
-            <img src = "" alt = "Aaron" width=100 height=100 class="pfp">
+            <img src = "" alt = "Aaron"  class="pfp">
             <p>Short description of yourself</p> 
 
             <h2>Our mission</h2>
