Added my description

--- a/Website/team.html
+++ b/Website/team.html
@@ -31,7 +31,7 @@
             
             <h3>Tristan G.</h2>
             <img src = "" alt = "TristanG"  class="pfp">
-            <p>Short description of yourself</p> 
+            <p>Hi, I'm a second year computer science student at the University of Ottawa. I love programming in Python and developing games and small tech demos.</p> 
 
             <h3>Tristan H.</h2>
             <img src = "assets\Tristan H PFP.png" alt = "TristanH"  class="pfp">
