--- a/Website/team.html
+++ b/Website/team.html
@@ -30,7 +30,7 @@
                 This is the reason why we are committed to bring you all three.</p>
             
             <h3>Tristan G.</h2>
-            <img src = "" alt = "TristanG"  class="pfp">
+            <img src = "assets\Tristan PFP.jpg" alt = "TristanG"  class="pfp">
             <p>Hi, I'm a second year computer science student at the University of Ottawa. I love programming in Python and developing games and small tech demos.</p> 
 
             <h3>Tristan H.</h2>
