--- a/Website/team.html
+++ b/Website/team.html
@@ -49,8 +49,9 @@
             <p>I'm a 1st year computer science student at the University of Ottawa. I have considerable skills in Python and JavaScript, as well as valuable experience in Git, Java and Web development (HTML, CSS). This my second time working on a website and I'm really enjoying it.</p> 
 
             <h3>Aaron</h2>
-            <img src = "" alt = "Aaron"  class="pfp">
-            <p>Short description of yourself</p> 
+            <img src = "assets/Aaron PFP.jpg" alt = "Aaron"  class="pfp">
+            <p>I'm a 1st year softawre engineering student at the University of Ottawa. I only had skills in Python. But working on this project with my teammates allowed me to aquire skills as a self-taught in HTML and in CSS. That was a difficult, but enriching experience for a beginner like me. I really enjoyed it. 
+                And i'd like to deepen my knowledges in these, and learn JavaScript too.</p> 
 
             <h2>Our mission</h2>
 
