added Aaron's description and picture (his push was not working)

--- a/Website/team.html
+++ b/Website/team.html
@@ -30,11 +30,11 @@
                 This is the reason why we are committed to bring you all three.</p>
             
             <h3>Tristan G.</h2>
-            <img src = "assets\unicorn.png" alt = "TristanG"  class="pfp">
+            <img src = "assets/unicorn.png" alt = "TristanG"  class="pfp">
             <p>Hi, I'm a second year computer science student at the University of Ottawa. I love programming in Python and developing games and small tech demos.</p> 
 
             <h3>Tristan H.</h2>
-            <img src = "assets\Tristan H PFP.png" alt = "TristanH"  class="pfp">
+            <img src = "assets/Tristan H PFP.png" alt = "TristanH"  class="pfp">
             <p> Tristan Hebert is a super awesome first year software engineer at the University of Ottawa. He has always been interested in 
                 problem solving as well as finding ways to make everything more efficient. This is his first project in the website 
                 desing industry and he is eager to work on many more projects in the years to come.</p> 
@@ -48,8 +48,10 @@
             <p>I'm a 1st year computer science student at the University of Ottawa. I have considerable skills in Python and JavaScript, as well as valuable experience in Git, Java and Web development (HTML, CSS). This my second time working on a website and I'm really enjoying it.</p> 
 
             <h3>Aaron</h2>
-            <img src = "" alt = "Aaron"  class="pfp">
-            <p>Short description of yourself</p> 
+            <img src = "assets/Aaron PFP.png" alt = "Aaron"  class="pfp">
+            <p>I'm a 1st year softawre engineering student at the University of Ottawa. I only had skills in Python. 
+                But working on this project with my teammates allowed me to aquire skills as a self-taught in HTML and in CSS. That was a difficult, 
+                but enriching experience for a beginner like me. I really enjoyed it. And i'd like to deepen my knowledges in these, and learn JavaScript too.</p> 
 
             <h2>Our mission</h2>
 
